Add a bit of state management (ctx), modal styling, gluing components, small refactorin

--- a/src/__colors.scss
+++ b/src/__colors.scss
@@ -4,7 +4,6 @@ $badge-bckg: rgb(176,59,23);
 
 $txt-primary: rgb(34, 34, 34);
 $txt-secondary: rgb(240, 240, 240);
-// $bckg-primary: rgb(242, 242, 242);
 $bckg-primary: white;
 $bckg-secondary: rgb(50,49,50);
 
@@ -12,6 +11,6 @@ $btn-primary: rgb(127, 38, 7);
 $btn-txt-primary: $txt-secondary;
 
 $btn-secondary: $txt-secondary;
-$btn-txt-seconday: $btn-primary;
+$btn-txt-secondary: $btn-primary;
 
 $price-color: rgb(155,76,18);
