--- a/src/components/UI/layout/Header.module.scss
+++ b/src/components/UI/layout/Header.module.scss
@@ -2,11 +2,13 @@
 
 .header {
     display: flex;
+    position: sticky;
+    top: 0;
+    z-index: 2;
     align-items: center;
     justify-content: space-between;
     padding: 1rem 4rem;
     background: $header-bckg;
-    position: relative;
 }
 
 .title {
