--- a/src/index.scss
+++ b/src/index.scss
@@ -18,7 +18,6 @@ code {
   text-align: center;
 }
 
-
 button {
   &:hover {
     opacity: 0.8;
@@ -36,7 +35,27 @@ button {
 }
 
 .secondary-btn {
-  border: 1px solid $btn-txt-seconday;
+  border: 1px solid $btn-txt-secondary;
   background: $btn-secondary;
   color: $btn-txt-secondary;
+}
+
+.center-modal {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.fade-in {
+  animation: fadeIn .2s ease-in 1;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0%;
+  }
+
+  100% {
+    opacity: 100%;
+  }
 }
