--- a/src/modals/common/Backdrop.module.scss
+++ b/src/modals/common/Backdrop.module.scss
@@ -1,7 +1,9 @@
 .container {
     background: rgba(0, 0, 0, 0.7);
-    position: absolute;
+    // display: block;
+    position: fixed;
     top: 0;
     height: 100vh;
     width: 100vw;
+    z-index: 10;
 }
