--- a/src/pages/home/Home.module.scss
+++ b/src/pages/home/Home.module.scss
@@ -17,7 +17,7 @@
 }
 
 .card-wrapper {
-    margin-top: 5rem;
+    padding-top: 5rem;
     display: flex;
     position: relative;
     align-items: center;
