--- a/src/components/UI/badge-icon/BadgeIcon.module.scss
+++ b/src/components/UI/badge-icon/BadgeIcon.module.scss
@@ -3,7 +3,7 @@
 .badge-icon {
     width: 2rem;
     border-radius: 2rem;
-    padding: .2rem 1rem;
+    padding: .2rem .5rem;
     text-align: center;
     background: $badge-bckg;
     color: $txt-secondary;
