--- a/src/index.scss
+++ b/src/index.scss
@@ -28,6 +28,20 @@ button {
   }
 }
 
+.primary-btn, .secondary-btn {
+  &:not(:disabled) {
+    cursor: pointer;
+
+    &:hover {
+      opacity: 0.6;
+    }
+  }
+
+  padding: .4rem 1.4rem;
+  // padding: rem .8rem;
+  border-radius: 1rem;
+}
+
 .primary-btn {
   border: none;
   background: $btn-primary;
@@ -36,7 +50,7 @@ button {
 
 .secondary-btn {
   border: 1px solid $btn-txt-secondary;
-  background: $btn-secondary;
+  background: none;
   color: $btn-txt-secondary;
 }
 
